--- a/vignettes/Chapter10Solutions.Rmd
+++ b/vignettes/Chapter10Solutions.Rmd
@@ -56,7 +56,7 @@ North        After     N36        0
 She is looking for evidence of a difference across different values of `Zone` when `Impact=After` so will be wanting to do a hypothesis test. This is a BACI design, so she would be particularly interested in the `Zone:Impact` interaction. Because she has count data with plenty of zeros, this should be analysed using a generalised linear model (assuming a negative binomial or Poisson response, as in Code Box 10.1).
 
 
-## Exercise 10.3: Invertebrate response to bush regeneration}
+## Exercise 10.3: Invertebrate response to bush regeneration
 *Anthony wants to evaluate how well invertebrate communities are re-establishing following bush regeneration efforts.*
 
  Treatment |    Count
@@ -77,7 +77,7 @@ She is looking for evidence of a difference across different values of `Zone` wh
 He is looking for evidence of an effect of revegetation so will be wanting to do a hypothesis test for a `Treatment` effect. Because he has count data, with zeros, this should be analysed using a generalised linear model (assuming a negative binomial or Poisson response, as in Code Box 10.1).
 
 
-## Code Box 10.1: Example GLM fits for Exercises 10.1-3.}
+## Code Box 10.1: Example GLM fits for Exercises 10.1-3.
 For Exercise 10.1:
 
 ```r
@@ -89,7 +89,6 @@ ft_crab = glm(CrabPres~Time*Dist, family=binomial("cloglog"),
 ```
 
 For Exercise 10.2:
-\begin{verbatim}
 
 ```r
 data(windFarms)
