--- a/vignettes/Chapter15Solutions.Rmd
+++ b/vignettes/Chapter15Solutions.Rmd
@@ -249,7 +249,7 @@ log=TRUE))
 plot(windLassoTrain$lambda,predLLlasso,type="l",log="x")
 ```
 
-![plot of chunk code15.3](figure/code15.3-1.png)
+![plot of chunk code15.3](../man/figures/code15.3-1.png)
 
 ```r
 isBestLambda = which(predLLlasso==max(predLLlasso))
@@ -262,7 +262,7 @@ matplot(windLasso$lambda,t(windLasso$beta),type="n", log="x")
 matlines(windLasso$lambda,t(windLasso$beta))
 ```
 
-![plot of chunk code15.3beta](figure/code15.3beta-1.png)
+![plot of chunk code15.3beta](../man/figures/code15.3beta-1.png)
 
 ## Code Box 15.4: Fitting a group-LASSO to the wind farm data
 
@@ -297,7 +297,7 @@ predLLgrplasso = colSums(dpois(windComp$data$windMV[isTest], prGrpTest,log=TRUE)
 plot(windGrplasso$lambda,predLLgrplasso,log="x",type="l")
 ```
 
-![plot of chunk code15.4](figure/code15.4-1.png)
+![plot of chunk code15.4](../man/figures/code15.4-1.png)
 
 ```r
 isBestLambdaGrplasso = which(predLLgrplasso==max(predLLgrplasso))
@@ -309,7 +309,7 @@ matplot(windGrplasso$lambda,t(windGrplasso$coefficients),type="n",log="x")
 matlines(windGrplasso$lambda,t(windGrplasso$coefficients))
 ```
 
-![plot of chunk code15.4beta](figure/code15.4beta-1.png)
+![plot of chunk code15.4beta](../man/figures/code15.4beta-1.png)
 
 ## Exercise 15.5: Comparing predictive likelihoods for the wind farm data
 *Compare the predictive log-likelihoods from Code Box 15.1 and Figures 15.1c-d. These models were all applied using the same test dataset. Which model seems to fit the data better? Why do you think this is?*
@@ -334,7 +334,7 @@ zoneyear = interaction(windFarms$X$Zone,windFarms$X$Year)
 matplot(as.numeric(zoneyear),latvar(wind_RR2),pch=c(1,19))
 ```
 
-![plot of chunk code15.5](figure/code15.5-1.png)
+![plot of chunk code15.5](../man/figures/code15.5-1.png)
 
 *Which model fits better, according to BIC?*
 
@@ -350,7 +350,7 @@ spid.trait = traitglm(spider$abund,spider$x,method="cv.glm1path")
 #> No traits matrix entered, so will fit SDMs with different env response for each spp
 ```
 
-![plot of chunk code15.6](figure/code15.6-1.png)
+![plot of chunk code15.6](../man/figures/code15.6-1.png)
 
 ```r
 library(lattice)
@@ -363,7 +363,7 @@ scales = list( x= list(rot = 45)) )
 print(plot.4th)
 ```
 
-![plot of chunk code15.6](figure/code15.6-2.png)
+![plot of chunk code15.6](../man/figures/code15.6-2.png)
 
 *Which environmental variables seem to have the strongest effect on spider abundances?*
 
